--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node server.js",
+        "watch": "nodemon server.js",
+        "seed": "node seeds/index.js"
     },
     "keywords": [],
     "author": "",
@@ -12,9 +15,13 @@
     "dependencies": {
         "connect-session-sequelize": "^7.1.7",
         "dotenv": "^16.4.5",
+        "express": "^4.19.2",
         "express-handlebars": "^7.1.3",
         "express-session": "^1.18.0",
         "pg": "^8.12.0",
         "sequelize": "^6.37.3"
+    },
+    "devDependencies": {
+        "nodemon": "^3.1.4"
     }
 }
