feat: established routes for posts, comments, and user login, established database and its seeds

--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 # sess variable secret from server.js
 SECRET = 'Super secret secret'
 
+# sequelize login from connection.js
 DB_NAME = 'debug_db'
 DB_USER = 'postgres'
 DB_PASSWORD = ''
+
+# user data from user-seeds.js
+USER_USERNAME = 'batman4ever'
+USER_PASSWORD = 'Passward4'
+USER_EMAIL = 'bat@man.com'
